<resources>
    <string name="app_name">Daily Bucket List</string>
    <string name="monday">Mo</string>
    <string name="tuesday">Di</string>
    <string name="wednesday">Mi</string>
    <string name="thursday">Do</string>
    <string name="friday">Fr</string>
    <string name="saturday">Sa</string>
    <string name="sunday">So</string>

    <!--ACTIONBAR STRINGS-->
    <string name="action_search">Search</string>
    <string name="action_add_goal">Add Goal</string>
    <string name="action_settings">Settings</string>

    <!--SEARCH GOAL STRINGS-->
    <string name="toast_goal_not_existing">In der ausgewählten Woche hast du kein Ziel erstellt.</string>
    <string name="calendar_view_heading">Nach welcher Kalendarwoche suchst du?</string>
    <string name="calendar_week_text">KW: </string>
    <string name="btn_search_week_text">Suchen</string>

    <!--ADD GOAL STRINGS-->
    <string name="add_message">Welches Ziel setzt du dir?</string>
    <string name="add_positive">hinzufügen</string>
    <string name="add_negative">abbrechen</string>

    <!--DELETE GOAL STRINGS-->
    <string name="delete_message">Möchtest du das Ziel wirklich löschen?</string>
    <string name="delete_positive">löschen</string>
    <string name="delete_negative">abbrechen</string>



    <!--TUTORIAL STRINGS-->
    <string name="title_activity_tabbing">TabbingActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="tab1">Tutorial Seite 1</string>
    <string name="tab2">Tutorial Seite 2</string>
    <string name="tutorial_text_1">Organisiere deine Aufgaben und behalte den Überblick. Dieses Tutorial erklärt dir die Funktionen der App. Du kannst es nach dem Start jederzeit unter den Einstellungen wieder aufrufen. Per Swipe nach links wechselst du zur nächsten Seite.</string>
    <string name="tutorial_text_2">Über das "+" Symbol erstellst du neue Aufgaben.</string>
    <string name="tutorial_text_3">Wähle eine Aufgabe aus und markiere sie als "erfüllt" oder lösche den Eintrag.</string>
    <string name="tutorial_text_4">Über das Lupen Symbol suchst du nach vergangenen Einträgen. Alternativ kannst du auf der Startseite zwischen den Wochen swipen.</string>
    <string name="tutorial_text_5">Lasse dir eine Notification zur gewünschten Uhrzeit senden, um die Erfüllung deiner Ziele zu überprüfen. Den Zeitpunkt kannst du jederzeit unter den Einstellungen ändern.</string>
    <string name="title_activity_tabbing__v2">TabbingActivity_V2</string>
    <string name="btn_getStarted_text">Los geht\'s</string>

    <!--WIDGET STRINGS-->
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>

    <!--NOTIFICATION STRINGS-->
    <string name="notification_title">Hast Du heute deine Ziele erreicht?</string>
    <string name="notification_text">Trage es jetzt ein!</string>
    <string name="button_set_alarm">Setze Uhrzeit</string>

    <!--PREFERENCES STRINGS-->
    <string name="pref_summary_set_notification">Ändere den Zeitpunkt deiner Benachrichtigung</string>
    <string name="pref_title_set_notification">Benachrichtigungszeitpunkt</string>
    <string name="pref_summary_show_tutorial">Das Tutorial erklärt Dir, wie die App funktioniert</string>
    <string name="pref_title_show_tutorial">Tutorial</string>

    <!--GOAL REACH ACTIVITY STRINGS-->
    <string name="goal_reached_text">Aufgabe erfüllt</string>




</resources>
