<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bucketListView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="horizontal"
    android:gravity="center_horizontal">

    <TextView
        android:id="@+id/monday"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.9"
        android:gravity="center"
        android:text="@string/monday" />

    <TextView
        android:id="@+id/tuesday"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.9"
        android:gravity="center"
        android:text="@string/tuesday" />

    <TextView
        android:id="@+id/wednesday"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.9"
        android:gravity="center"
        android:text="@string/wednesday" />

    <TextView
        android:id="@+id/thursday"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.9"
        android:gravity="center"
        android:text="@string/thursday" />

    <TextView
        android:id="@+id/friday"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.9"
        android:gravity="center"
        android:text="@string/friday" />

    <TextView
        android:id="@+id/saturday"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.9"
        android:gravity="center"
        android:text="@string/saturday" />

    <TextView
        android:id="@+id/sunday"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.9"
        android:gravity="center"
        android:text="@string/sunday" />

</LinearLayout>